--- a/data/cards/34034150.yaml
+++ b/data/cards/34034150.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>分<rt>ぶん</rt></ruby><ruby>裂<rt>れつ</rt></ruby>するマザー・スパイダー
   ja_romaji: Bunretsusuru Mazā Supaidā
-  ko:
-  ko_rr:
+  ko: 분열하는 마더 스파이더
+  ko_rr: Bun-yeolha-neun Madeo Seupaideo
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：自分フィールドにモンスターが存在しない場合、このカードは手札から特殊召喚できる。②：このカードをリリースして発動できる。手札・デッキから「ベビー・スパイダー」を３体まで特殊召喚する。この効果で特殊召喚したモンスターはレベルが５になり、Ｘ召喚の素材とする場合、闇属性モンスターのＸ召喚にしか使用できない。この効果の発動後、ターン終了時まで自分はＸモンスターしかＥＸデッキから特殊召喚できない。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 몬스터가 존재하지 않을 경우, 이 카드는 패에서 특수 소환할 수 있다. ②: 이 카드를 릴리스하고 발동할 수 있다. 패 / 덱에서 "베이비 스파이더"를 3장까지 특수 소환한다. 이 효과로 특수 소환한 몬스터는 레벨이 5 가 되고, 엑시즈 소환의 소재로 할 경우, 어둠 속성 몬스터의 엑시즈 소환으로밖에 사용할 수 없다. 이 효과의 발동 후, 턴 종료시까지 자신은 엑시즈 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
   zh-TW:
   zh-CN:
 card_type: Monster
