--- a/data/cards/35756798.yaml
+++ b/data/cards/35756798.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ファイナル・クロス
   ja_romaji: Fainaru Kurosu
-  ko:
-  ko_rr:
+  ko: 파이널 크로스
+  ko_rr: Paineol Keuroseu
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：Ｓモンスターが自分の墓地へ送られた自分ターンに、自分フィールドのＳモンスター１体を対象として発動できる。このターン、そのモンスターは１度のバトルフェイズ中に２回攻撃できる。元々のカード名に「ウォリアー」、「シンクロン」、「スターダスト」の内、いずれかを含むＳモンスターを対象としてこのカードを発動した場合、さらに自分の墓地のＳモンスター１体を選んでその攻撃力分だけ対象のモンスターの攻撃力をアップできる。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 싱크로 몬스터가 자신 묘지로 보내진 자신 턴에, 자신 필드의 싱크로 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 턴에, 그 몬스터는 1번의 배틀 페이즈 중에 2회 공격할 수 있다. 원래의 카드명에 "워리어", "싱크론", "스타더스트" 중, 어느 것을 포함하는 싱크로 몬스터를 대상으로 하여 이 카드를 발동했을 경우, 추가로 자신 묘지의 싱크로 몬스터 1장을 고르고 그 공격력만큼만 대상 몬스터의 공격력을 올릴 수 있다.
   zh-TW:
   zh-CN:
 card_type: Spell
