--- a/data/cards/54594017.yaml
+++ b/data/cards/54594017.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>ＢＦ<rt>ブラックフェザー</rt></ruby>－<ruby>下<rt>か</rt></ruby><ruby>弦<rt>げん</rt></ruby>のサルンガ
   ja_romaji: Burakku Fezā - Kagen no Sarunga
-  ko:
-  ko_rr:
+  ko: <ruby>BF<rt>블랙 페더</rt></ruby>－하현의 사룬가
+  ko_rr: Beullaek Pedeo - Hahyeon-ui Sarun-ga
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果はデュエル中に１度しか使用できない。①：フィールドに攻撃力２０００以上のモンスターが存在する場合、このカードは手札から特殊召喚できる。②：自分フィールドに「ＢＦ」Ｓモンスターが存在する場合、墓地のこのカードを除外し、相手フィールドの表側表示のカード１枚を対象として発動できる。そのカードを破壊する。この効果は相手ターンでも発動できる。
-  ko:
+  ko: |-
+    이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②의 효과는 듀얼 중에 1번밖에 사용할 수 없다. ①: 필드에 공격력 2000 이상의 몬스터가 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다. ②: 자신 필드에 "BF(블랙 페더)" 싱크로 몬스터가 존재할 경우, 묘지의 이 카드를 제외하고, 상대 필드의 앞면 표시의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 파괴한다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
