--- a/data/rush/yugipedia932337.yaml
+++ b/data/rush/yugipedia932337.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（魔導騎士族または魔法使い族）１体に装備できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    装備モンスターの攻撃力は２００アップし、その攻撃は貫通する。装備モンスターが魔導騎士族の場合、さらに攻撃力を［装備モンスターのレベル］×２００アップする。
   ko:
   zh-TW:
   zh-CN:
