--- a/data/cards/02752099.yaml
+++ b/data/cards/02752099.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>薔薇占術師<rt>ローズ・シャーマン</rt></ruby>
   ja_romaji: Rōzu Shāman
-  ko:
-  ko_rr:
+  ko: 로즈 샤먼
+  ko_rr: Rojeu Syameon
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：このカードをリリースして発動できる。自分はデッキから１枚ドローする。②：墓地のこのカードを除外し、自分の墓地の植物族モンスター１体を対象として発動できる。そのモンスターを手札に加える。この効果で元々のレベルが７以上の植物族モンスターを手札に加えた場合、さらにデッキから植物族モンスター１体を墓地へ送る事ができる。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드를 릴리스하고 발동할 수 있다. 자신은 덱에서 1장 드로우한다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 식물족 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 패에 넣는다. 이 효과로 원래의 레벨이 7 이상인 식물족 몬스터를 패에 넣었을 경우, 추가로 덱에서 식물족 몬스터 1장을 묘지로 보낼 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
