--- a/data/cards/03574681.yaml
+++ b/data/cards/03574681.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>金<rt>きん</rt></ruby><ruby>科<rt>か</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>条<rt>じょう</rt></ruby>
   ja_romaji: Kinkagyokujō
-  ko:
-  ko_rr:
+  ko: 금과옥조
+  ko_rr: Geumgwa-okjo
   zh-TW:
   zh-CN:
 text:
@@ -24,7 +24,8 @@ text:
   pt:
   ja: |-
     このカード名はルール上「宝玉」カードとしても扱う。このカード名のカードは１ターンに１枚しか発動できない。①：デッキから「宝玉獣」モンスター２体を選び、永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く。その後、置いたカードとはカード名が異なる「宝玉獣」モンスター１体を自分の手札・墓地から選んで特殊召喚し、このカードを装備する。このカードがフィールドから離れた時にそのモンスターは破壊される。
-  ko:
+  ko: |-
+    이 카드명은 룰상 "보옥" 카드로도 취급한다. 이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 덱에서 "보옥수" 몬스터 2장을 골라, 지속 마법 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓는다. 그 후, 놓은 카드와는 카드명이 다른 "보옥수" 몬스터 1장을 자신의 패 / 묘지에서 골라 특수 소환하고, 이 카드를 장착한다. 이 카드가 필드에서 벗어났을 때에 그 몬스터는 파괴된다.
   zh-TW:
   zh-CN:
 card_type: Spell
