--- a/data/cards/22790910.yaml
+++ b/data/cards/22790910.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>智<rt>ち</rt></ruby>の<ruby>賢<rt>けん</rt></ruby><ruby>者<rt>じゃ</rt></ruby>－ヒンメル
   ja_romaji: Chi no Kenja - Hinmeru
-  ko:
-  ko_rr:
+  ko: 지의 현자－힘멜
+  ko_rr: Ji-ui Hyeonja - Himmel
   zh-TW:
   zh-CN:
 text:
@@ -24,7 +24,8 @@ text:
   pt:
   ja: |-
     このカード名はルール上「閃刀」カードとしても扱う。このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：手札から魔法カード１枚を捨てて発動できる。このカードを手札から特殊召喚する。②：自分フィールドのリンクモンスターを対象とする効果を相手が発動した時、自分の墓地から魔法カード２枚を除外して発動できる。その効果を無効にする。③：このカードが戦闘・効果で破壊され墓地へ送られた場合、除外されている自分の「閃刀」魔法カード１枚を対象として発動できる。そのカードを手札に加える。
-  ko:
+  ko: |-
+    이 카드명은 룰상 "섬도" 카드로도 취급한다. 이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패에서 마법 카드 1장을 버리고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 자신 필드의 링크 몬스터를 대상으로 하는 효과를 상대가 발동했을 때, 자신 묘지에서 마법 카드 2장을 제외하고 발동할 수 있다. 그 효과를 무효로 한다. ③: 이 카드가 전투 / 효과로 파괴되어 묘지로 보내졌을 경우, 제외되어 있는 자신의 "섬도" 마법 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 패에 넣는다.
   zh-TW:
   zh-CN:
 card_type: Monster
