--- a/data/cards/23812568.yaml
+++ b/data/cards/23812568.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: アディショナル・ミラー・レベル<ruby>７<rt>セブン</rt></ruby>
   ja_romaji: Adishonaru Mirā Reberu Sebun
-  ko:
-  ko_rr:
+  ko: 애디셔널 미러 레벨 <ruby>7<rt>세분</rt></ruby>
+  ko_rr: Aedisyeoneol Mireo Rebel Sebun
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：自分フィールドにレベル７モンスターが特殊召喚された場合、手札・デッキから「アディショナル・ミラー・レベル７」２枚を墓地へ送り、そのモンスター１体を対象として発動できる。その同名モンスター２体をデッキから特殊召喚する。その後、自分はこの効果で特殊召喚したモンスターの元々の攻撃力の合計分のダメージを受ける。このカードの発動後、ターン終了時まで自分は１回しかＥＸデッキからモンスターを特殊召喚できない。
-  ko:
+  ko: |-
+    ①: 자신 필드에 레벨 7 몬스터가 특수 소환되었을 경우, 패 / 덱에서 "애디셔널 미러 레벨 7(세븐)" 2장을 묘지로 보내고, 그 몬스터 1장을 대상으로 하여 발동할 수 있다. 그와 같은 이름의 몬스터 2장을 덱에서 특수 소환한다. 그 후, 자신은 이 효과로 특수 소환한 몬스터의 원래 공격력의 합계만큼의 데미지를 받는다. 이 카드의 발동 후, 턴 종료시까지 자신은 1회밖에 엑스트라 덱에서 몬스터를 특수 소환할 수 없다.
   zh-TW:
   zh-CN:
 card_type: Spell
