--- a/data/cards/31600513.yaml
+++ b/data/cards/31600513.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: プレイング・マンティス
   ja_romaji: Pureingu Mantisu
-  ko:
-  ko_rr:
+  ko: 프레잉 맨티스
+  ko_rr: Peureing Maentiseu
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：自分スタンバイフェイズに発動できる。自分フィールドに「ベビーカマキリトークン」（昆虫族・風・星１・攻／守５００）１体を特殊召喚する。②：１ターンに１度、相手モンスターの攻撃宣言時、自分の魔法＆罠ゾーンのカード１枚を墓地へ送って発動できる。その相手モンスターを持ち主の手札に戻す。③：墓地のこのカードを除外して発動できる。自分フィールドに「ベビーカマキリトークン」１体を特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 스탠바이 페이즈에 발동할 수 있다. 자신 필드에 "베이비사마귀 토큰"(곤충족 / 바람 / 레벨 1 / 공 500 / 수 500) 1장을 특수 소환한다. ②: 1턴에 1번, 상대 몬스터의 공격 선언시, 자신의 마법 & 함정 존의 카드 1장을 묘지로 보내고 발동할 수 있다. 그 상대 몬스터를 주인의 패로 되돌린다. ③: 묘지의 이 카드를 제외하고 발동할 수 있다. 자신 필드에 "베이비사마귀 토큰" 1장을 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Monster
