--- a/data/cards/32549749.yaml
+++ b/data/cards/32549749.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>武<rt>ぶ</rt></ruby><ruby>装<rt>そう</rt></ruby><ruby>再<rt>さい</rt></ruby><ruby>生<rt>せい</rt></ruby>
   ja_romaji: Busō Saisei
-  ko:
-  ko_rr:
+  ko: 무장재생
+  ko_rr: Mujangjaesaeng
   zh-TW:
   zh-CN:
 text:
@@ -28,7 +28,10 @@ text:
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選択して発動できる。
     ●自分フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターの攻撃力はターン終了時まで８００アップする。
     ●自分または相手の墓地の装備魔法カード１枚を対象として発動できる。そのカードを自分フィールドにセットするか、そのカードを装備可能な自分フィールドのモンスター１体に装備する。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 이하의 효과에서 1개를 선택하고 발동할 수 있다.
+    ●자신 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력은 턴 종료시까지 800 올린다.
+    ●자신 또는 상대 묘지의 장착 마법 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 자신 필드에 세트하거나, 그 카드를 장착 가능한 자신 필드의 몬스터 1장에 장착한다.
   zh-TW:
   zh-CN:
 card_type: Spell
