--- a/data/cards/39973386.yaml
+++ b/data/cards/39973386.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>表<rt>ひょう</rt></ruby><ruby>裏<rt>り</rt></ruby><ruby>一<rt>いっ</rt></ruby><ruby>体<rt>たい</rt></ruby>
   ja_romaji: Hyōri Ittai
-  ko:
-  ko_rr:
+  ko: 표리일체
+  ko_rr: Pyori-ilche
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドの光・闇属性モンスター１体をリリースして発動できる。そのモンスターと元々の種族・レベルが同じで、元々の属性が異なる光・闇属性モンスター１体を手札・ＥＸデッキから特殊召喚する。②：自分メインフェイズに墓地のこのカードを除外し、自分の墓地の光・闇属性モンスターをそれぞれ１体ずつ対象として発動できる。そのモンスター２体をデッキに戻してシャッフルする。その後、自分はデッキから１枚ドローする。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 빛 / 어둠 속성 몬스터 1장을 릴리스하고 발동할 수 있다. 그 몬스터와 원래의 종족 / 레벨이 같고, 원래의 속성이 다른 빛 / 어둠 속성 몬스터 1장을 패 / 엑스트라 덱에서 특수 소환한다. ②: 자신 메인 페이즈에 묘지의 이 카드를 제외하고, 자신 묘지의 빛 / 어둠 속성 몬스터를 각각 1장씩 대상으로 하여 발동할 수 있다. 그 몬스터 2장을 덱으로 되돌리고 셔플한다. 그 후, 자신은 덱에서 1장 드로우한다.
   zh-TW:
   zh-CN:
 card_type: Spell
