--- a/data/cards/53754104.yaml
+++ b/data/cards/53754104.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ガード・マンティス
   ja_romaji: Gādo Mantisu
-  ko:
-  ko_rr:
+  ko: 가드 맨티스
+  ko_rr: Gadeu Maentiseu
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：１０００ＬＰを払って発動できる。このカードを手札から守備表示で特殊召喚する。この効果で特殊召喚したこのカードがモンスターゾーンに表側表示で存在する限り、自分は昆虫族モンスターしか特殊召喚できない。②：相手ターンに、自分フィールドの昆虫族モンスター１体を対象として発動できる。そのモンスターの表示形式を変更する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 1000 LP를 지불하고 발동할 수 있다. 이 카드를 패에서 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 이 카드가 몬스터 존에 앞면 표시로 존재하는 한, 자신은 곤충족 몬스터밖에 특수 소환할 수 없다. ②: 상대 턴에, 자신 필드의 곤충족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 표시 형식을 변경한다.
   zh-TW:
   zh-CN:
 card_type: Monster
