--- a/data/cards/60023855.yaml
+++ b/data/cards/60023855.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ベビー・スパイダー
   ja_romaji: Bebī Supaidā
-  ko:
-  ko_rr:
+  ko: 베이비 스파이더
+  ko_rr: Beibi Seupaideo
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドの闇属性モンスター１体をリリースして発動できる。自分フィールドの全ての「ベビー・スパイダー」のレベルは、この効果を発動するためにリリースしたモンスターのレベル分だけ上がる。②：ＬＰを半分払い、墓地のこのカードを除外し、自分フィールドの闇属性ＸモンスターのＸ素材を１つ取り除き、自分の墓地の闇属性モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 어둠 속성 몬스터 1장을 릴리스하고 발동할 수 있다. 자신 필드의 모든 "베이비 스파이더"의 레벨은, 이 효과를 발동하기 위해 릴리스한 몬스터의 레벨만큼만 올라간다. ②: LP를 절반 지불하여, 묘지의 이 카드를 제외하고, 자신 필드의 어둠 속성 엑시즈 몬스터의 엑시즈 소재를 1개 제거하여, 자신 묘지의 어둠 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Monster
