--- a/data/cards/60306277.yaml
+++ b/data/cards/60306277.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: シンクロ・ゾーン
   ja_romaji: Shinkuro Zōn
-  ko:
-  ko_rr:
+  ko: 싱크로 존
+  ko_rr: Singkeuro Jon
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが魔法＆罠ゾーンに存在する限り、お互いにＳモンスターでしか攻撃宣言できない。②：チューナー以外のＳモンスターが自分の墓地へ送られた場合、そのモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。この効果で特殊召喚したモンスターはチューナーとして扱う。③：相手メインフェイズに、魔法＆罠ゾーンの表側表示のこのカードを墓地へ送って発動できる。自分フィールドのモンスターを素材としてＳ召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 마법 & 함정 존에 존재하는 한, 서로 싱크로 몬스터로밖에 공격 선언할 수 없다. ②: 튜너 이외의 싱크로 몬스터가 자신 묘지로 보내졌을 경우, 그 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 효과로 특수 소환한 몬스터는 튜너로 취급한다. ③: 상대 메인 페이즈에, 마법 & 함정 존의 앞면 표시의 이 카드를 묘지로 보내고 발동할 수 있다. 자신 필드의 몬스터를 소재로서 싱크로 소환한다.
   zh-TW:
   zh-CN:
 card_type: Trap
