--- a/data/cards/61245403.yaml
+++ b/data/cards/61245403.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ネコーン
   ja_romaji: Nekōn
-  ko:
-  ko_rr:
+  ko: 고양이콘
+  ko_rr: Gayang-ikon
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合、自分のフィールドゾーンにカードが存在しなければ発動できる。デッキからフィールド魔法カード１枚を手札に加える。②：このカードが戦闘・効果で破壊され墓地へ送られた場合、自分の墓地のフィールド魔法カード１枚を対象として発動できる。そのカードの同名カード１枚をデッキから手札に加える。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우, 자신의 필드 존에 카드가 존재하지 않으면 발동할 수 있다. 덱에서 필드 마법 카드 1장을 패에 넣는다. ②: 이 카드가 전투 / 효과로 파괴되어 묘지로 보내졌을 경우, 자신 묘지의 필드 마법 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드의 같은 이름의 카드 1장을 덱에서 패에 넣는다.
   zh-TW:
   zh-CN:
 card_type: Monster
