--- a/data/cards/61322713.yaml
+++ b/data/cards/61322713.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>陰<rt>かげ</rt></ruby>の<ruby>光<rt>ひかり</rt></ruby>
   ja_romaji: Kage no Hikari
-  ko:
-  ko_rr:
+  ko: 그림자의 빛
+  ko_rr: Geurimja-ui Bit
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できず、この効果を発動するターン、自分はバトルフェイズを行えない。①：自分フィールドの闇属性モンスター１体を対象として発動できる。そのモンスターと元々の種族・レベルが同じとなる光属性モンスター１体をデッキ・ＥＸデッキから特殊召喚する。②：墓地のこのカードを除外して発動できる。このターン自分は通常召喚に加えて１度だけ、自分メインフェイズに光・闇属性モンスター１体を召喚できる。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없으며, 이 효과를 발동하는 턴에, 자신은 배틀 페이즈를 실행할 수 없다. ①: 자신 필드의 어둠 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터와 원래의 종족 / 레벨이 같아지는 빛 속성 몬스터 1장을 덱 / 엑스트라 덱에서 특수 소환한다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 이 턴에 자신은 통상 소환 외에도 1번만, 자신 메인 페이즈에 빛 / 어둠 속성 몬스터 1장을 일반 소환할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Spell
