--- a/data/cards/66367984.yaml
+++ b/data/cards/66367984.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: エレメントの<ruby>加<rt>か</rt></ruby><ruby>護<rt>ご</rt></ruby>
   ja_romaji: Eremento no Kago
-  ko:
-  ko_rr:
+  ko: 엘리멘트의 가호
+  ko_rr: Ellimenteu-ui Gaho
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：魔法・罠カードが発動した時、自分フィールドの表側表示の「Ｅ・ＨＥＲＯ」モンスター１体をエンドフェイズまで除外して発動できる。その発動を無効にし破壊する。②：自分フィールドに「Ｅ・ＨＥＲＯ ジ・アース」が存在する場合、墓地のこのカードを除外して発動できる。自分の手札・墓地のモンスター及び除外されている自分のモンスターの中から、「Ｅ・ＨＥＲＯ」モンスター１体を選んで召喚条件を無視して特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 마법 / 함정 카드가 발동했을 때, 자신 필드의 앞면 표시의 "엘리멘틀 히어로" 몬스터 1장을 엔드 페이즈까지 제외하고 발동할 수 있다. 그 발동을 무효로 하고 파괴한다. ②: 자신 필드에 "엘리멘틀 히어로 디 어스"가 존재할 경우, 묘지의 이 카드를 제외하고 발동할 수 있다. 자신의 패 / 묘지의 몬스터 및 제외되어 있는 자신 몬스터 중에서, "엘리멘틀 히어로" 몬스터 1장을 골라 소환 조건을 무시하고 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Trap
