--- a/data/cards/yugipedia934313.yaml
+++ b/data/cards/yugipedia934313.yaml
@@ -32,6 +32,7 @@ attribute: FIRE
 level: 8
 atk: 2800
 def: 2000
+materials: 1 Tuner + 1 or more non-Tuner monsters
 series:
 - Salamangreat
 images:
