--- a/data/cards/14812471.yaml
+++ b/data/cards/14812471.yaml
@@ -87,6 +87,9 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: DP28-JP011
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
   ko:
   - set_number: SD35-KRP02
     set_name: 'Structure Deck: Soulburner Extra Deck Enhancement Pack'
