--- a/data/cards/51339637.yaml
+++ b/data/cards/51339637.yaml
@@ -71,6 +71,9 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: DP28-JP017
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
   ko:
   - set_number: SD35-KR033
     set_name: 'Structure Deck: Soulburner'
