--- a/data/cards/26889158.yaml
+++ b/data/cards/26889158.yaml
@@ -95,6 +95,9 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: DP28-JP008
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
   ko:
   - set_number: SD35-KR003
     set_name: 'Structure Deck: Soulburner'
