--- a/data/cards/52155219.yaml
+++ b/data/cards/52155219.yaml
@@ -115,6 +115,9 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: DP28-JP014
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
   ko:
   - set_number: SD35-KR023
     set_name: 'Structure Deck: Soulburner'
