--- a/data/cards/52277807.yaml
+++ b/data/cards/52277807.yaml
@@ -75,6 +75,9 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: DP28-JP009
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
   ko:
   - set_number: SD35-KR004
     set_name: 'Structure Deck: Soulburner'
