--- a/data/cards/87871125.yaml
+++ b/data/cards/87871125.yaml
@@ -148,6 +148,9 @@ sets:
     - Super Rare
     - Secret Rare
     - 20th Secret Rare
+  - set_number: DP28-JP012
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
   ko:
   - set_number: SAST-KR048
     set_name: Savage Strike
