--- a/data/cards/yugipedia934406.yaml
+++ b/data/cards/yugipedia934406.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>囚<rt>しゅう</rt></ruby><ruby>人<rt>じん</rt></ruby> ストーン・スィーパー
-  ja_romaji: Jibaku Shūjin Sutōn Swīpā
+  ja_romaji: Jibakushūjin Sutōn Swīpā
   ko:
   ko_rr:
   zh-TW:
