--- a/data/cards/yugipedia934438.yaml
+++ b/data/cards/yugipedia934438.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>異<rt>い</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>共<rt>きょう</rt></ruby><ruby>鳴<rt>めい</rt></ruby>－シンクロ・フュージョン
-  ja_romaji: Ikai Kyōmei - Shinkuro Fyūjon
+  ja_romaji: Ikaikyōmei - Shinkuro Fyūjon
   ko:
   ko_rr:
   zh-TW:
