--- a/data/cards/yugipedia934400.yaml
+++ b/data/cards/yugipedia934400.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>囚<rt>しゅう</rt></ruby><ruby>人<rt>じん</rt></ruby> グランド・キーパー
-  ja_romaji: Jibaku Shūjin Gurando Kīpā
+  ja_romaji: Jibakushūjin Gurando Kīpā
   ko:
   ko_rr:
   zh-TW:
