--- a/data/cards/yugipedia934415.yaml
+++ b/data/cards/yugipedia934415.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>戒<rt>かい</rt></ruby><ruby>隷<rt>れい</rt></ruby> ジオクラーケン
-  ja_romaji: Jibaku Kairei Jio Kurāken
+  ja_romaji: Jibakukairei Jio Kurāken
   ko:
   ko_rr:
   zh-TW:
