--- a/data/cards/yugipedia934432.yaml
+++ b/data/cards/yugipedia934432.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>戒<rt>かい</rt></ruby><ruby>隷<rt>れい</rt></ruby> ジオグリフォン
-  ja_romaji: Jibaku Kairei Jio Gurifon
+  ja_romaji: Jibakukairei Jio Gurifon
   ko:
   ko_rr:
   zh-TW:
