--- a/data/cards/yugipedia934436.yaml
+++ b/data/cards/yugipedia934436.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>牢<rt>ろう</rt></ruby>
-  ja_romaji: Jibaku Rō
+  ja_romaji: Jibakurō
   ko:
   ko_rr:
   zh-TW:
