--- a/data/cards/05361647.yaml
+++ b/data/cards/05361647.yaml
@@ -96,6 +96,9 @@ sets:
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Common
+  - set_number: DP28-JP040
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
   ko:
   - set_number: LTGY-KR017
     set_name: Lord of the Tachyon Galaxy
