--- a/data/cards/10875327.yaml
+++ b/data/cards/10875327.yaml
@@ -40,6 +40,7 @@ level: 10
 atk: 2500
 def: 2500
 series:
+- Earthbound
 - Earthbound Immortal
 images:
 - index: 1
@@ -124,6 +125,9 @@ sets:
     set_name: Duelist Edition Volume 3
     rarities:
     - Rare
+  - set_number: AC03-JP038
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: RGBT-KR019
     set_name: Raging Battle
