--- a/data/cards/65743242.yaml
+++ b/data/cards/65743242.yaml
@@ -35,6 +35,8 @@ text:
     ①：对方怪兽的攻击宣言时才能发动。那个攻击对象由自己重新选择。
 card_type: Trap
 property: Normal
+series:
+- Earthbound
 images:
 - index: 1
   image: CalloftheEarthbound-DP22-JP-C.png
