--- a/data/cards/95453143.yaml
+++ b/data/cards/95453143.yaml
@@ -107,6 +107,9 @@ sets:
     set_name: Tournament Pack 2020 Vol.3
     rarities:
     - C
+  - set_number: AC03-JP041
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: PP06-KR015
     set_name: Premium Pack Vol.6
