--- a/data/cards/44710391.yaml
+++ b/data/cards/44710391.yaml
@@ -38,6 +38,8 @@ text:
     ③：同调怪兽特殊召唤的场合才能由自己把这个效果发动。从卡组把1张「地缚神」魔法·陷阱卡加入手卡。
 card_type: Spell
 property: Field
+series:
+- Earthbound
 images:
 - index: 1
   image: EarthboundGeoglyph-LDS3-EN-C-1E.png
@@ -92,6 +94,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Super Rare
+  - set_number: AC03-JP042
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: DP22-KR026
     set_name: 'Duelist Pack: Legend Duelist 5'
