--- a/data/cards/45836982.yaml
+++ b/data/cards/45836982.yaml
@@ -42,6 +42,8 @@ attribute: DARK
 level: 8
 atk: 2900
 def: 2900
+series:
+- Earthbound
 images:
 - index: 1
   image: EarthboundGreaterLinewalker-LDS3-EN-C-1E.png
@@ -96,6 +98,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Ultra Rare
+  - set_number: AC03-JP040
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: DP22-KR023
     set_name: 'Duelist Pack: Legend Duelist 5'
