--- a/data/cards/68144350.yaml
+++ b/data/cards/68144350.yaml
@@ -96,6 +96,9 @@ sets:
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Rare
+  - set_number: DP28-JP041
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
   ko:
   - set_number: LTGY-KR019
     set_name: Lord of the Tachyon Galaxy
