--- a/data/cards/71921856.yaml
+++ b/data/cards/71921856.yaml
@@ -91,6 +91,9 @@ sets:
     set_name: Number Complete File -Piece of Memories-
     rarities:
     - Ultra Rare
+  - set_number: DP28-JP044
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
   ko:
   - set_number: EP14-KR054
     set_name: 'Extra Pack: Knights of Order'
