--- a/data/cards/79867938.yaml
+++ b/data/cards/79867938.yaml
@@ -96,6 +96,9 @@ sets:
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Common
+  - set_number: DP28-JP039
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
   ko:
   - set_number: LTGY-KR016
     set_name: Lord of the Tachyon Galaxy
