--- a/rush.yaml
+++ b/rush.yaml
@@ -58504,7 +58504,7 @@ name:
   it:
   pt:
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby><ruby>羊<rt>よう</rt></ruby><ruby>女<rt>じょ</rt></ruby>メェ～グちゃん
-  ja_romaji: Mahō Yōjo Mee~gu-chan
+  ja_romaji: Mahōyōjo Mee~gu-chan
   ko: 마법양녀 메에~구양
   ko_rr:
   zh-TW:
@@ -99443,3 +99443,60 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 934251
+---
+konami_id:
+name:
+  en: Transamu Rainac Overwrite
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザム・ライナック・オーバーライト
+  ja_romaji: Toranzamu Rainakku Ōbāraito
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Reduce the Level of 1 face-up Level 4 or higher monster on either field by 3 until the end of this turn. Then, this card gains 500 ATK until the end of this turn. Then, if you have "Transamu Rainac" in your Graveyard, this card's name becomes "Transamu Rainac" this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 7
+atk: 2500
+def: 1600
+series:
+- Transamu
+images:
+- index: 1
+  image: TransamuRainacOverwrite-RDCGR2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/CGR2-JP001
+    set_name: Yu-Gi-Oh! GO RUSH!! Volume 2 promotional card
+    rarities:
+    - Ultra Rare
+yugipedia_page_id: 934466
