--- a/data/rush/yugipedia930620.yaml
+++ b/data/rush/yugipedia930620.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have "Blue-Tooth Burst Dragon" or "Red-Boot Boost Dragon" face-up on your field during your Main Phase this card was Normal or Special Summoned.
+    You have "Blue Tooth Burst Dragon" or "Red Boot Boost Dragon" face-up on your field during your Main Phase this card was Normal or Special Summoned.
   de:
   es:
   fr:
