--- a/data/rush/yugipedia930962.yaml
+++ b/data/rush/yugipedia930962.yaml
@@ -44,7 +44,7 @@ atk: 2900
 def: 2100
 materials:
   en: |-
-    "Red-Boot Boost Dragon" + "Booster Wyvern"
+    "Red Boot Boost Dragon" + "Booster Wyvern"
   de:
   es:
   fr:
