--- a/data/rush/yugipedia901971.yaml
+++ b/data/rush/yugipedia901971.yaml
@@ -44,7 +44,7 @@ atk: 2500
 def: 2500
 materials:
   en: |-
-    "Blue-Tooth Burst Dragon" + "Tamabot"
+    "Blue Tooth Burst Dragon" + "Tamabot"
   de:
   es:
   fr:
