--- a/data/rush/yugipedia930622.yaml
+++ b/data/rush/yugipedia930622.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up card on either field. Then, if you sent a monster whose original Level is 7 or higher to the Graveyard to meet the requirement, you can Special Summon 1 "Blue-Tooth Burst Dragon" from your Graveyard face-up to your field.
+    Destroy 1 face-up card on either field. Then, if you sent a monster whose original Level is 7 or higher to the Graveyard to meet the requirement, you can Special Summon 1 "Blue Tooth Burst Dragon" from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ atk: 3000
 def: 2000
 materials:
   en: |-
-    "Blue-Tooth Burst Dragon" + "Booster Wyvern"
+    "Blue Tooth Burst Dragon" + "Booster Wyvern"
   de:
   es:
   fr:
