--- a/rush.yaml
+++ b/rush.yaml
@@ -70284,7 +70284,7 @@ yugipedia_page_id: 716014
 ---
 konami_id: 17865
 name:
-  en: Blue-Tooth Burst Dragon
+  en: Blue Tooth Burst Dragon
   de:
   es:
   fr:
@@ -75389,7 +75389,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, if you have no monsters on your field, you can Special Summon 1 "Blue-Tooth Burst Dragon" or "Red-Boot Boost Dragon" from your Graveyard face-up to your field.
+    Send the top 2 cards of your Deck to the Graveyard. Then, if you have no monsters on your field, you can Special Summon 1 "Blue Tooth Burst Dragon" or "Red-Boot Boost Dragon" from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -96192,7 +96192,7 @@ atk: 2500
 def: 2500
 materials:
   en: |-
-    "Blue-Tooth Burst Dragon" + "Tamabot"
+    "Blue Tooth Burst Dragon" + "Tamabot"
   de:
   es:
   fr:
@@ -97615,7 +97615,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have "Blue-Tooth Burst Dragon" or "Red-Boot Boost Dragon" face-up on your field during your Main Phase this card was Normal or Special Summoned.
+    You have "Blue Tooth Burst Dragon" or "Red Boot Boost Dragon" face-up on your field during your Main Phase this card was Normal or Special Summoned.
   de:
   es:
   fr:
@@ -97684,7 +97684,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by sending face-up Dragon Type monsters from your field to the Graveyard as material. Then, if you sent "Blue-Tooth Burst Dragon" to the Graveyard by this effect, you can make 1 face-up monster on your opponent's field lose 1500 ATK until the end of this turn.
+    Fusion Summon by sending face-up Dragon Type monsters from your field to the Graveyard as material. Then, if you sent "Blue Tooth Burst Dragon" to the Graveyard by this effect, you can make 1 face-up monster on your opponent's field lose 1500 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -97738,7 +97738,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up card on either field. Then, if you sent a monster whose original Level is 7 or higher to the Graveyard to meet the requirement, you can Special Summon 1 "Blue-Tooth Burst Dragon" from your Graveyard face-up to your field.
+    Destroy 1 face-up card on either field. Then, if you sent a monster whose original Level is 7 or higher to the Graveyard to meet the requirement, you can Special Summon 1 "Blue Tooth Burst Dragon" from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -97756,7 +97756,7 @@ atk: 3000
 def: 2000
 materials:
   en: |-
-    "Blue-Tooth Burst Dragon" + "Booster Wyvern"
+    "Blue Tooth Burst Dragon" + "Booster Wyvern"
   de:
   es:
   fr:
@@ -97825,7 +97825,7 @@ atk: 2900
 def: 2100
 materials:
   en: |-
-    "Red-Boot Boost Dragon" + "Booster Wyvern"
+    "Red Boot Boost Dragon" + "Booster Wyvern"
   de:
   es:
   fr:
@@ -97876,7 +97876,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by sending face-up Dragon Type monsters from your field to the Graveyard as material. Then, if you sent "Red-Boot Boost Dragon" to the Graveyard by this effect, you can send the top 7 cards of your Deck to the Graveyard. Then, if you sent a card from the Deck to the Graveyard, you can send the top 7 cards of your opponent's Deck to the Graveyard.
+    Fusion Summon by sending face-up Dragon Type monsters from your field to the Graveyard as material. Then, if you sent "Red Boot Boost Dragon" to the Graveyard by this effect, you can send the top 7 cards of your Deck to the Graveyard. Then, if you sent a card from the Deck to the Graveyard, you can send the top 7 cards of your opponent's Deck to the Graveyard.
   de:
   es:
   fr:
@@ -97918,7 +97918,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned, reveal 1 "Blue-Tooth Burst Dragon" or "Red-Boot Boost Dragon" in your hand.
+    During your Main Phase this card was Normal or Special Summoned, reveal 1 "Blue Tooth Burst Dragon" or "Red Boot Boost Dragon" in your hand.
   de:
   es:
   fr:
