--- a/data/cards/22211622.yaml
+++ b/data/cards/22211622.yaml
@@ -97,6 +97,9 @@ sets:
     set_name: Maximum Crisis
     rarities:
     - Rare
+  - set_number: AC03-JP046
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: MACR-KR018
     set_name: Maximum Crisis
