--- a/data/cards/43387895.yaml
+++ b/data/cards/43387895.yaml
@@ -113,6 +113,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 6'
     rarities:
     - Common
+  - set_number: AC03-JP049
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: COTD-KR038
     set_name: Code of the Duelist
