--- a/data/cards/99469936.yaml
+++ b/data/cards/99469936.yaml
@@ -82,6 +82,9 @@ sets:
     set_name: 'Duelist Pack: Kastle Siblings'
     rarities:
     - Ultra Rare
+  - set_number: AC03-JP043
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: DP15-JP018
     set_name: 'Duelist Pack: Kastle Siblings'
