--- a/data/cards/25853045.yaml
+++ b/data/cards/25853045.yaml
@@ -106,6 +106,9 @@ sets:
     set_name: 'Duelist Pack: Duelists of the Abyss'
     rarities:
     - Common
+  - set_number: AC03-JP044
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: DP15-KR019
     set_name: 'Duelist Pack: Kastle Siblings'
