--- a/data/cards/69610326.yaml
+++ b/data/cards/69610326.yaml
@@ -128,6 +128,9 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Ultimate Rare
+  - set_number: AC03-JP047
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: MACR-KR019
     set_name: Maximum Crisis
