--- a/data/cards/70771599.yaml
+++ b/data/cards/70771599.yaml
@@ -107,6 +107,9 @@ sets:
     set_name: Code of the Duelist
     rarities:
     - Rare
+  - set_number: AC03-JP050
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: COTD-KR039
     set_name: Code of the Duelist
