--- a/data/cards/84869738.yaml
+++ b/data/cards/84869738.yaml
@@ -71,6 +71,9 @@ sets:
     set_name: Code of the Duelist
     rarities:
     - Common
+  - set_number: AC03-JP052
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: COTD-KR070
     set_name: Code of the Duelist
