--- a/data/cards/96227613.yaml
+++ b/data/cards/96227613.yaml
@@ -97,6 +97,9 @@ sets:
     set_name: Maximum Crisis
     rarities:
     - Rare
+  - set_number: AC03-JP045
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: MACR-KR017
     set_name: Maximum Crisis
