--- a/data/cards/96733134.yaml
+++ b/data/cards/96733134.yaml
@@ -118,6 +118,9 @@ sets:
     set_name: Code of the Duelist
     rarities:
     - Rare
+  - set_number: AC03-JP048
+    set_name: Animation Chronicle 2023
+    rarities:
   ko:
   - set_number: COTD-KR015
     set_name: Code of the Duelist
