--- a/data/rush/16800.yaml
+++ b/data/rush/16800.yaml
@@ -62,4 +62,9 @@ sets:
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/EV03-KR003
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 717298
