--- a/data/rush/16961.yaml
+++ b/data/rush/16961.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 애꾸눈의 화이트 타이거
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     ある者には恐怖、ある者には尊敬の対象とされている、気高き密林の王者。
-  ko:
+  ko: |-
+    어떤 이에게는 공포의, 어떤 이에게는 존경의 대상이 되는 긍지 높은 밀림의 왕자.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -42,6 +43,11 @@ sets:
     - Common
   - set_number: RD/SST1-JP022
     set_name: Saikyo Starter Deck
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV03-KR007
+    set_name: Event Pack 2023 Vol.1
     rarities:
     - Common
 yugipedia_page_id: 717043
