--- a/data/rush/16963.yaml
+++ b/data/rush/16963.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 스파이크 시드라
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     体のトゲを相手に突き刺し、電流を流して攻撃する。
-  ko:
+  ko: |-
+    몸의 가시를 상대에게 찔러 전류를 흘려보내 공격한다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -42,6 +43,11 @@ sets:
     - Common
   - set_number: RD/SST1-JP010
     set_name: Saikyo Starter Deck
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV03-KR008
+    set_name: Event Pack 2023 Vol.1
     rarities:
     - Common
 yugipedia_page_id: 716789
