--- a/data/rush/17838.yaml
+++ b/data/rush/17838.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 커스 오브 드래곤
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     邪悪なドラゴン。闇の力を使った攻撃は強力だ。
-  ko:
+  ko: |-
+    사악한 드래곤. 어둠의 힘을 사용한 공격은 강력하다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -42,4 +43,9 @@ sets:
     - Common
     - Super Rare
     - Ultra Rare
+  ko:
+  - set_number: RD/EV03-KR006
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
 yugipedia_page_id: 714394
