--- a/data/rush/18298.yaml
+++ b/data/rush/18298.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 용기사 가이아
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     「暗黒騎士ガイア」＋「カース・オブ・ドラゴン」
-  ko:
+  ko: |-
+    "암흑 기사 가이아" ＋ "커스 오브 드래곤"
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -54,4 +55,10 @@ sets:
     - Common
     - Super Rare
     - Ultra Rare
+  ko:
+  - set_number: RD/EV03-KR002
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 711070
