--- a/data/rush/16772.yaml
+++ b/data/rush/16772.yaml
@@ -73,4 +73,9 @@ sets:
     set_name: Go Rush Deck Bonus Cards
     rarities:
     - Common
+  - set_number: RD/EV03-KR005
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 712735
