--- a/data/rush/17270.yaml
+++ b/data/rush/17270.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 메카레온
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     身体の色を変化させ、どんな場所にでも隠れることができる。
-  ko:
+  ko: |-
+    신체의 색을 변화시켜, 어떤 장소라도 숨을 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -40,6 +41,11 @@ sets:
   ja:
   - set_number: RD/B004-JP006
     set_name: Battle Pack Vol.4
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV03-KR009
+    set_name: Event Pack 2023 Vol.1
     rarities:
     - Common
 yugipedia_page_id: 715842
