--- a/data/rush/17272.yaml
+++ b/data/rush/17272.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 요르문가르드
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     神話の世界に出てくるヘビ。非常に長い。
-  ko:
+  ko: |-
+    신화의 세계에 등장하는 뱀. 매우 길다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -38,6 +39,11 @@ sets:
   ja:
   - set_number: RD/B004-JP008
     set_name: Battle Pack Vol.4
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV03-KR010
+    set_name: Event Pack 2023 Vol.1
     rarities:
     - Common
 yugipedia_page_id: 717554
