--- a/data/rush/17273.yaml
+++ b/data/rush/17273.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 수륙의 제왕
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     大きな口から四方八方に炎をはく、爬虫類のばけもの。
-  ko:
+  ko: |-
+    커다란 입에서 사방팔방으로 화염을 뿜어내는 파충류 괴물.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -42,6 +43,11 @@ sets:
     - Common
   - set_number: RD/SST1-JP009
     set_name: Saikyo Starter Deck
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV03-KR011
+    set_name: Event Pack 2023 Vol.1
     rarities:
     - Common
 yugipedia_page_id: 714788
