--- a/data/rush/17483.yaml
+++ b/data/rush/17483.yaml
@@ -74,4 +74,9 @@ sets:
     set_name: Strongest Battle Deck Yudias - Shining Velgariva
     rarities:
     - Common
+  - set_number: RD/EV03-KR004
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 717191
