--- a/rush.yaml
+++ b/rush.yaml
@@ -40504,6 +40504,11 @@ sets:
     set_name: Go Rush Deck Bonus Cards
     rarities:
     - Common
+  - set_number: RD/EV03-KR005
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 712735
 ---
 konami_id: 16773
@@ -42292,6 +42297,11 @@ sets:
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/EV03-KR003
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 717298
 ---
 konami_id: 16805
@@ -46370,7 +46380,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 애꾸눈의 화이트 타이거
   ko_rr:
   zh-TW:
   zh-CN:
@@ -46384,7 +46394,8 @@ text:
   pt:
   ja: |-
     ある者には恐怖、ある者には尊敬の対象とされている、気高き密林の王者。
-  ko:
+  ko: |-
+    어떤 이에게는 공포의, 어떤 이에게는 존경의 대상이 되는 긍지 높은 밀림의 왕자.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -46404,6 +46415,11 @@ sets:
     - Common
   - set_number: RD/SST1-JP022
     set_name: Saikyo Starter Deck
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV03-KR007
+    set_name: Event Pack 2023 Vol.1
     rarities:
     - Common
 yugipedia_page_id: 717043
@@ -46468,7 +46484,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 스파이크 시드라
   ko_rr:
   zh-TW:
   zh-CN:
@@ -46482,7 +46498,8 @@ text:
   pt:
   ja: |-
     体のトゲを相手に突き刺し、電流を流して攻撃する。
-  ko:
+  ko: |-
+    몸의 가시를 상대에게 찔러 전류를 흘려보내 공격한다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -46502,6 +46519,11 @@ sets:
     - Common
   - set_number: RD/SST1-JP010
     set_name: Saikyo Starter Deck
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV03-KR008
+    set_name: Event Pack 2023 Vol.1
     rarities:
     - Common
 yugipedia_page_id: 716789
@@ -53089,7 +53111,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 드래곤을 탄 와이반
   ko_rr:
   zh-TW:
   zh-CN:
@@ -53103,7 +53125,8 @@ requirement:
   pt:
   ja: |-
     相手フィールドの表側表示モンスターが、モンスター（地属性・水属性・炎属性）のみの場合に発動できる。
-  ko:
+  ko: |-
+    상대 필드의 앞면 표시 몬스터가, 몬스터(땅 속성 / 물 속성 / 화염 속성)뿐일 경우에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -53116,7 +53139,8 @@ effect:
   pt:
   ja: |-
     このターン、このカードは直接攻撃できる。
-  ko:
+  ko: |-
+    이 턴에, 이 카드는 직접 공격할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -53135,7 +53159,8 @@ materials:
   pt:
   ja: |-
     「ベビードラゴン」＋「ワイバーンの戦士」
-  ko:
+  ko: |-
+    "베이비 드래곤" ＋ "와이반 전사"
   zh-TW:
   zh-CN:
 images:
@@ -53149,6 +53174,12 @@ sets:
     - Common
     - Super Rare
     - Ultra Rare
+  ko:
+  - set_number: RD/EV03-KR001
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 712619
 ---
 konami_id: 17270
@@ -53161,7 +53192,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 메카레온
   ko_rr:
   zh-TW:
   zh-CN:
@@ -53175,7 +53206,8 @@ text:
   pt:
   ja: |-
     身体の色を変化させ、どんな場所にでも隠れることができる。
-  ko:
+  ko: |-
+    신체의 색을 변화시켜, 어떤 장소라도 숨을 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -53193,6 +53225,11 @@ sets:
   ja:
   - set_number: RD/B004-JP006
     set_name: Battle Pack Vol.4
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV03-KR009
+    set_name: Event Pack 2023 Vol.1
     rarities:
     - Common
 yugipedia_page_id: 715842
@@ -53261,7 +53298,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 요르문가르드
   ko_rr:
   zh-TW:
   zh-CN:
@@ -53275,7 +53312,8 @@ text:
   pt:
   ja: |-
     神話の世界に出てくるヘビ。非常に長い。
-  ko:
+  ko: |-
+    신화의 세계에 등장하는 뱀. 매우 길다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -53293,6 +53331,11 @@ sets:
     set_name: Battle Pack Vol.4
     rarities:
     - Common
+  ko:
+  - set_number: RD/EV03-KR010
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
 yugipedia_page_id: 717554
 ---
 konami_id: 17273
@@ -53305,7 +53348,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 수륙의 제왕
   ko_rr:
   zh-TW:
   zh-CN:
@@ -53319,7 +53362,8 @@ text:
   pt:
   ja: |-
     大きな口から四方八方に炎をはく、爬虫類のばけもの。
-  ko:
+  ko: |-
+    커다란 입에서 사방팔방으로 화염을 뿜어내는 파충류 괴물.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -53339,6 +53383,11 @@ sets:
     - Common
   - set_number: RD/SST1-JP009
     set_name: Saikyo Starter Deck
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV03-KR011
+    set_name: Event Pack 2023 Vol.1
     rarities:
     - Common
 yugipedia_page_id: 714788
@@ -58013,6 +58062,11 @@ sets:
     set_name: Strongest Battle Deck Yudias - Shining Velgariva
     rarities:
     - Common
+  - set_number: RD/EV03-KR004
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 717191
 ---
 konami_id: 17484
@@ -62396,7 +62450,7 @@ name:
   pt:
   ja: <ruby>強<rt>きょう</rt></ruby><ruby>者<rt>しゃ</rt></ruby>の<ruby>愉<rt>ゆ</rt></ruby><ruby>悦<rt>えつ</rt></ruby>
   ja_romaji: Kyōsha no Yuetsu
-  ko:
+  ko: 강자의 유열
   ko_rr:
   zh-TW:
   zh-CN:
@@ -62410,7 +62464,8 @@ requirement:
   pt:
   ja: |-
     相手がモンスターを召喚した時に発動できる。
-  ko:
+  ko: |-
+    상대가 몬스터를 일반 소환했을 때에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -62423,7 +62478,8 @@ effect:
   pt:
   ja: |-
     自分フィールドの表側表示の通常モンスター１体を選び、その攻撃力・守備力をターン終了時まで、［相手が召喚したそのモンスターのレベル］×１００アップする。
-  ko:
+  ko: |-
+    자신 필드의 앞면 표시 일반 몬스터 1장을 고르고, 그 공격력 / 수비력을 턴 종료시까지, [상대가 일반 소환한 그 몬스터의 레벨] × 100 올린다.
   zh-TW:
   zh-CN:
 card_type: Trap
@@ -62440,6 +62496,11 @@ sets:
     - Super Rare
   - set_number: RD/LGP1-JP047
     set_name: Legend Awakening Pack
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV03-KR012
+    set_name: Event Pack 2023 Vol.1
     rarities:
     - Common
 yugipedia_page_id: 714506
@@ -68914,7 +68975,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 커스 오브 드래곤
   ko_rr:
   zh-TW:
   zh-CN:
@@ -68928,7 +68989,8 @@ text:
   pt:
   ja: |-
     邪悪なドラゴン。闇の力を使った攻撃は強力だ。
-  ko:
+  ko: |-
+    사악한 드래곤. 어둠의 힘을 사용한 공격은 강력하다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -68948,6 +69010,11 @@ sets:
     - Common
     - Super Rare
     - Ultra Rare
+  ko:
+  - set_number: RD/EV03-KR006
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
 yugipedia_page_id: 714394
 ---
 konami_id: 17839
@@ -81320,7 +81387,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 용기사 가이아
   ko_rr:
   zh-TW:
   zh-CN:
@@ -81334,7 +81401,8 @@ text:
   pt:
   ja: |-
     「暗黒騎士ガイア」＋「カース・オブ・ドラゴン」
-  ko:
+  ko: |-
+    "암흑 기사 가이아" ＋ "커스 오브 드래곤"
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -81366,6 +81434,12 @@ sets:
     - Common
     - Super Rare
     - Ultra Rare
+  ko:
+  - set_number: RD/EV03-KR002
+    set_name: Event Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 711070
 ---
 konami_id: 18299
