--- a/rush.yaml
+++ b/rush.yaml
@@ -99574,3 +99574,401 @@ sets:
     rarities:
     - Ultra Rare
 yugipedia_page_id: 934466
+---
+konami_id:
+name:
+  en: Dead or Arainac
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: デッド・オア・ライナック
+  ja_romaji: Deddo Oa Rainakku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares a direct attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Gain 800 LP. Then, draw 1 card and show it. Then, if that card is a Galaxy Type Normal Monster with 1600 or more ATK, negate the attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: DeadorArainac-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP058
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 934523
+---
+konami_id:
+name:
+  en: Advance Impact
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: アドバンス・インパクト
+  ja_romaji: Adobansu Inpakuto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have no monsters on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Choose 1 face-up monster on your opponent's field, and send monsters from your hand to the Graveyard whose total Levels equal the chosen monster's Level. This turn, if you would Tribute Summon a monster, you can Tribute the chosen opponent's face-up monster instead of 1 monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: AdvanceImpact-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP046
+    set_name: Oblivion of the Flash
+    rarities:
+    - Super Rare
+    - Secret Rare
+yugipedia_page_id: 934525
+---
+konami_id:
+name:
+  en: Recombination Galactica
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: リコンビネーション・ギャラクティカ
+  ja_romaji: Rikonbinēshon Gyarakutika
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your monster is destroyed by an opponent's attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Galaxy Type Normal Monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Galactica
+images:
+- index: 1
+  image: RecombinationGalactica-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP059
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 934527
+---
+konami_id:
+name:
+  en: Galactiara Fuse Eve
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ギャラクティアラ・<ruby>Ｆ<rt>ヒュース</rt></ruby>・イブ
+  ja_romaji: Gyarakutiara Hyūsu Ivu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 1 "Fusion" from your Graveyard on either the top or bottom of the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card. Then, you can Special Summon 1 Galaxy Type Normal Monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: LIGHT
+level: 7
+atk: 2400
+def: 1600
+materials:
+  en: |-
+    "Galactiara Eve" + 1 LIGHT Attribute Galaxy Type monster
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+images:
+- index: 1
+  image: GalactiaraFuseEve-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP034
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 934529
+---
+konami_id:
+name:
+  en: Voidvelgr Gullinbursti
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヴォイドヴェルグ・グリンブルスティ
+  ja_romaji: Voidoverugu Gurinburusuti
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up DARK Attribute Galaxy Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster cannot be destroyed by Spell Card effects, also it gains 800 ATK during your turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+series:
+- Voidvelgr
+images:
+- index: 1
+  image: VoidvelgrGullinbursti-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP050
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 934532
+---
+konami_id:
+name:
+  en: Voidvelgr Shroud
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヴォイドヴェルグ・シュラウド
+  ja_romaji: Voidoverugu Shuraudo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up Galaxy Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains ATK equal to [the number of Spell/Trap Cards on your field] x 100. While the equipped monster is face-up on your field, Spell/Trap Cards on your field cannot be destroyed by your opponent's card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+series:
+- Voidvelgr
+images:
+- index: 1
+  image: VoidvelgrShroud-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP051
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 934534
+---
+konami_id:
+name:
+  en: Voidvelgr Theogonia
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヴォイドヴェルグ・テオゴニア
+  ja_romaji: Voidoverugu Teogonia
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During your Main Phase this card was Special Summoned.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Level 8 Galaxy Type monster from your Graveyard face-up to your field. The monster Special Summoned by this effect cannot be destroyed by card effects until the end of your opponent's next turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: DARK
+level: 9
+atk: 3000
+def: 3000
+materials:
+  en: |-
+    "Voidvelgr Chrysaor" + "Dark Prophet"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Voidvelgr
+images:
+- index: 1
+  image: VoidvelgrTheogonia-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP039
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 934536
