--- a/data/cards/06901008.yaml
+++ b/data/cards/06901008.yaml
@@ -73,6 +73,9 @@ sets:
     set_name: V Jump Fall 2011 subscription bonus
     rarities:
     - Ultra Rare
+  - set_number: SD46-JP014
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: PP08-KR008
     set_name: Premium Pack Vol.8
