--- a/data/cards/14886469.yaml
+++ b/data/cards/14886469.yaml
@@ -93,6 +93,9 @@ sets:
     set_name: 'Booster SP: Highspeed Riders'
     rarities:
     - Super Rare
+  - set_number: SD46-JP011
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: SPHR-KR015
     set_name: 'Booster SP: Highspeed Riders'
