--- a/data/cards/33875961.yaml
+++ b/data/cards/33875961.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Durante tu Standby Phase, si esta carta está en Posición de Defensa, pon 1 contador en esta carta. Retira del juego un número de cartas en tu Cementerio igual al número de contadores en esta carta para destruir el mismo número de Cartas Mágicas o de Trampa en el Campo. Luego retira todos los contadores de esta carta.
   fr: |-
-    Durant votre Standby Phase, si cette carte est en Position de Défense, mettez 1 compteur sur cette carte. Retirez du jeu un nombre de cartes de votre Cimetière égal au nombre de compteurs sur cette carte pour détruire le même nombre de Cartes Magie ou Piège sur le Terrain. Retirez ensuite tous les compteurs de cette carte.
+    Une fois par tour, durant votre Standby Phase, si cette carte est en Position de Défense : placez 1 Compteur sur cette carte. Vous pouvez bannir un nombre de cartes dans votre Cimetière égal au nombre de Compteurs sur cette carte, puis ciblez autant de Magies/Pièges sur le Terrain ; détruisez-les, puis retirez tous les Compteurs de cette carte.
   it: |-
     Durante la tua Standby Phase, se questa carta è in Posizione di Difesa, metti 1 Segnalino su questa carta. Rimuovi dal gioco un numero di carte nel tuo Cimitero pari al numero di Segnalini su questa carta per distruggere lo stesso numero di Carte Magia o Trappola sul Terreno. Dopo di che rimuovi tutti i Segnalini da questa carta.
   pt: |-
