--- a/data/cards/35058857.yaml
+++ b/data/cards/35058857.yaml
@@ -74,6 +74,9 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SD46-JP015
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: PP11-KR004
     set_name: Premium Pack Vol.11
