--- a/data/cards/40975574.yaml
+++ b/data/cards/40975574.yaml
@@ -120,6 +120,9 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: SD46-JP007
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: SPHR-KR016
     set_name: 'Booster SP: Highspeed Riders'
