--- a/data/cards/77336644.yaml
+++ b/data/cards/77336644.yaml
@@ -91,6 +91,9 @@ sets:
     set_name: Duelist Edition Volume 3
     rarities:
     - Rare
+  - set_number: SD46-JP017
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: CRMS-KR004
     set_name: Crimson Crisis
