--- a/data/cards/80666118.yaml
+++ b/data/cards/80666118.yaml
@@ -164,6 +164,9 @@ sets:
     rarities:
     - Common
     - Super Rare
+  - set_number: SD46-JP041
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: DOCS-KR046
     set_name: Dimension of Chaos
