--- a/data/cards/15576074.yaml
+++ b/data/cards/15576074.yaml
@@ -107,6 +107,9 @@ sets:
     set_name: Storm of Ragnarok
     rarities:
     - Common
+  - set_number: SD46-JP027
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: STOR-KR056
     set_name: Storm of Ragnarok
