--- a/data/cards/36857073.yaml
+++ b/data/cards/36857073.yaml
@@ -126,6 +126,9 @@ sets:
     set_name: 'Booster SP: Highspeed Riders'
     rarities:
     - Super Rare
+  - set_number: SD46-JP043
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: SPHR-KR041
     set_name: 'Booster SP: Highspeed Riders'
