--- a/data/cards/80280737.yaml
+++ b/data/cards/80280737.yaml
@@ -113,6 +113,9 @@ sets:
     set_name: Tournament Pack 2019 Vol.1
     rarities:
     - Common
+  - set_number: SD46-JP039
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: CRMS-KR063
     set_name: Crimson Crisis
