--- a/data/rush/yugipedia930140.yaml
+++ b/data/rush/yugipedia930140.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>賢<rt>けん</rt></ruby><ruby>帝<rt>てい</rt></ruby><ruby>家<rt>か</rt></ruby><ruby>臣<rt>しん</rt></ruby>ツーゼ
-  ja_romaji: Kentei Kashin Tsūze
+  ja_romaji: Kenteikashin Tsūze
   ko:
   ko_rr:
   zh-TW:
