--- a/data/rush/yugipedia930141.yaml
+++ b/data/rush/yugipedia930141.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>星<rt>せい</rt></ruby><ruby>帝<rt>てい</rt></ruby><ruby>家<rt>か</rt></ruby><ruby>臣<rt>しん</rt></ruby>ヘーベ
-  ja_romaji: Seitei Kashin Hēbe
+  ja_romaji: Seiteikashin Hēbe
   ko:
   ko_rr:
   zh-TW:
