--- a/data/rush/yugipedia930188.yaml
+++ b/data/rush/yugipedia930188.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>烏賊合の衆<rt>デビルフーリッシュ</rt></ruby>
-  ja_romaji: Debiru Fūrisshu
+  ja_romaji: Debirufūrisshu
   ko:
   ko_rr:
   zh-TW:
