--- a/data/cards/07602840.yaml
+++ b/data/cards/07602840.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Cuando esta carta es destruida como resultado de una batalla y mandada al Cementerio, puedes Invocar mediante una Invocación Especial de tu Deck 1 monstruo de Tipo Máquina con un ATK de 1500 o inferior en Posición de Ataque boca arriba. Luego baraja tu Deck.
   fr: |-
-    Lorsque cette carte est détruite à l'issue d'un combat et envoyée au Cimetière, vous pouvez faire l'Invocation Spéciale d'1 monstre de Type Machine avec une ATK de 1500 ou moins de votre Deck en Position d'Attaque face recto. Mélangez ensuite votre Deck.
+    Lorsque cette carte est détruite au combat et envoyée au Cimetière : vous pouvez Invoquer Spécialement 1 monstre Machine avec max. 1500 ATK depuis votre Deck en Position d'Attaque face recto.
   it: |-
     Quando questa carta viene distrutta in seguito ad una battaglia e mandata al Cimitero, puoi Evocare tramite Evocazione Speciale dal tuo Deck 1 mostro di Tipo Macchina con un ATK di 1500 o inferiore scoperto in Posizione d'Attacco. Dopo di che, mischia il tuo Deck.
   pt: |-
