--- a/data/cards/32752319.yaml
+++ b/data/cards/32752319.yaml
@@ -24,8 +24,8 @@ text:
     "UFOroid" + 1 Monstruo de Tipo Guerrero
     Una Invocación de Fusión de esta carta sólo se puede realizar con los Monstruos Material de Fusión nombrados arriba. El ATK y la DEF originales de esta carta se convierten en igual al ATK original combinado de los 2 Monstruos Material de Fusión que se hayan usado en la Invocación de Fusión de esta carta.
   fr: |-
-    "UFOroid" + 1 monstre de Type Guerrier
-    Une Invocation Fusion de cette carte ne peut être réalisée qu'avec les Monstres-Matériels de Fusion ci-dessus. L'ATK et la DEF d'origine de cette carte sont égales à l'ATK originale combinée des 2 Monstres-Matériels de Fusion utilisés pour l'Invocation Fusion de cette carte.
+    "UFOroid" + 1 monstre Guerrier
+    L'Invocation Fusion de cette carte ne peut être faite qu'avec les Matériels Fusion ci-dessus. L'ATK/DEF d'origine de cette carte deviennent la somme des ATK d'origine des 2 Matériels utilisés pour son Invocation Fusion.
   it: |-
     "UFOroid" + 1 mostro di Tipo Guerriero
     L'Evocazione per Fusione di questa carta può essere effettuata solo con i Mostri Materiale da Fusione sopra riportati. ATK e DEF originali di questa carta diventano la somma degli ATK originali dei 2 Mostri Materiale da Fusione usati per l'Evocazione per Fusione di questa carta.
