--- a/data/rush/18983.yaml
+++ b/data/rush/18983.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18983
 name:
   en: Sevens Wonder Fusion
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「セブンスロード・マジシャン」を含む自分のフィールド・墓地のモンスターを素材として持ち主のデッキに戻し、フュージョン召喚する。
   ko:
   zh-TW:
   zh-CN:
