--- a/data/rush/18985.yaml
+++ b/data/rush/18985.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18985
 name:
   en: Emperor Realm
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードは、デッキの上からカード２枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードがフィールドゾーンに表側表示である限り、お互いのフィールドの元々の守備力が１０００の表側表示モンスター（レベル５以上）の攻撃力は４００アップする。
   ko:
   zh-TW:
   zh-CN:
