--- a/data/rush/18592.yaml
+++ b/data/rush/18592.yaml
@@ -1,60 +1,64 @@
 konami_id: 18592
 name:
-  en: Zaborg the Thunder Monarch
+  en: Machvio of the Ultimate Aria
   de:
   es:
   fr:
   it:
   pt:
-  ja:
-  ja_romaji:
+  ja: <ruby>極<rt>きょく</rt></ruby><ruby>奏<rt>そう</rt></ruby>のマッハヴァイオ
+  ja_romaji: Kyokusō no Mahhavaio
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 requirement:
   en: |-
-    During the turn you Tribute Summoned this card in Attack Position.
+    None
   de:
   es:
   fr:
   it:
   pt:
   ja: |-
-    このカードを攻撃表示でアドバンス召喚したターンに発動できる。
+    なし
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Continuous
 effect:
   en: |-
-    Destroy 1 monster on either field.
+    This card gains ATK equal to [the total number of Equip Spell Cards equipped to this card and the number of face-up Normal Monsters on your opponent's field] x 500.
   de:
   es:
   fr:
   it:
   pt:
   ja: |-
-    自分または相手フィールドのモンスター１体を選んで破壊する。
+    このカードの攻撃力は、［このカードが装備している装備魔法カードの数と相手フィールドの表側表示の通常モンスターの数の合計］×５００アップする。
   ko:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: Thunder / Effect
-attribute: LIGHT
-level: 5
+monster_type_line: Psychic / Effect
+attribute: WIND
+level: 7
 atk: 2400
-def: 1000
+def: 1400
 series:
-- Monarch
-legend: true
+- Shaman Bandit
 images:
 - index: 1
-  image: ZaborgtheThunderMonarch-RDKP13-JP-R.png
+  image: MachviooftheUltimateAria-RDKP12-JP-SR.png
 sets:
   ja:
-  - set_number: RD/KP13-JP020
-    set_name: Oblivion of the Flash
+  - set_number: RD/KP12-JP010
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
-    - Rare
-    - Secret Rare
-yugipedia_page_id: 930146
+    - Super Rare
+  - set_number: RD/BDG4-JP001
+    set_name: Yu-Gi-Oh! GO RUSH!! Duel-4 Blu-ray & DVD promotional card
+    rarities:
+    - Ultra Parallel Rare
+yugipedia_page_id: 715687
