--- a/data/rush/18986.yaml
+++ b/data/rush/18986.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18986
 name:
   en: Protection of Arthenée
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター１体をデッキに戻し、自分フィールドの表側表示モンスター１体に装備できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    装備モンスターは相手の効果では破壊されない。自分の墓地に装備魔法カードがある場合、さらに装備モンスターの攻撃力は３００アップする。
   ko:
   zh-TW:
   zh-CN:
@@ -41,6 +43,8 @@ property: Equip
 images:
 - index: 1
   image: ProtectionofArthenée-RDKP13-JP-SR.png
+- index: 2
+  image: ProtectionofArthenée-RDKP13-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP13-JP057
