--- a/data/rush/18987.yaml
+++ b/data/rush/18987.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18987
 name:
   en: Dead or Arainac
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手モンスターの直接攻撃宣言時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は８００ＬＰ回復する。その後、自分は１枚ドローし、お互いに確認する。そのカードが通常モンスター（ギャラクシー族／攻撃力１６００以上）だった場合、さらにその攻撃を無効にする。
   ko:
   zh-TW:
   zh-CN:
