--- a/data/rush/18988.yaml
+++ b/data/rush/18988.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18988
 name:
   en: Recombination Galactica
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のモンスターが相手の攻撃で破壊された時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の通常モンスター（ギャラクシー族）１体を選び、自分フィールドに表側表示で特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
