--- a/data/rush/18989.yaml
+++ b/data/rush/18989.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18989
 name:
   en: Nobody Scat Thief
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドのモンスターが相手の攻撃または相手の効果で破壊された時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は３枚ドローする。その後、自分は手札を１枚以上選んで墓地へ送る。自分フィールドにモンスターがいない場合、さらにこのターン、相手モンスター（レベル８以下）の攻撃で自分は戦闘ダメージを受けない。
   ko:
   zh-TW:
   zh-CN:
