--- a/data/rush/18990.yaml
+++ b/data/rush/18990.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18990
 name:
   en: Rose Chain Salvage
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに装備魔法カードを装備したモンスター（レベル６以上／魔法使い族）がいる場合、相手がモンスターを特殊召喚した時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター１体を選び、自分フィールドに表側表示で特殊召喚する。その後、自分は［この効果で特殊召喚したモンスターの元々のレベル］×１００ＬＰ回復する。
   ko:
   zh-TW:
   zh-CN:
