--- a/data/rush/18992.yaml
+++ b/data/rush/18992.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18992
 name:
   en: Nativity of the Monarchs
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手がモンスター（レベル８以下）を表側表示で召喚・特殊召喚した時、自分フィールドのモンスター１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（レベル５以上／守備力１０００）１体を自分フィールドに表側攻撃表示で特殊召喚する。その後、相手が召喚・特殊召喚したそのモンスター１体を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
