--- a/data/rush/18993.yaml
+++ b/data/rush/18993.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18993
 name:
   en: Shared Sentiments
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手がモンスターを召喚した時、自分の墓地のモンスター（光属性）２体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（光属性）１体を選ぶ。このターン、そのモンスターの攻撃力は［その召喚されたモンスターの攻撃力］だけアップし、相手の効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
