--- a/data/rush/18994.yaml
+++ b/data/rush/18994.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18994
 name:
   en: Vortex of Shattered Light
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手がモンスター（レベル８以下）を表側表示で召喚・特殊召喚した時、自分の墓地のモンスター（光属性／魔法使い族）３体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    その召喚・特殊召喚されたモンスター１体を選んで破壊する。
   ko:
   zh-TW:
   zh-CN:
