--- a/data/rush/18961.yaml
+++ b/data/rush/18961.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>顕<rt>けん</rt></ruby><ruby>現<rt>げん</rt></ruby><ruby>術<rt>じゅつ</rt></ruby><ruby>師<rt>し</rt></ruby>ドルテオ
-  ja_romaji: Kengen Jutsushi Doruteo
+  ja_romaji: Kengenjutsushi Doruteo
   ko:
   ko_rr:
   zh-TW:
