--- a/data/rush/18963.yaml
+++ b/data/rush/18963.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: ギャラクティアラ・<ruby>Ｆ<rt>ヒュース</rt></ruby>・イブ
-  ja_romaji: Gyarakutiara Hyūsu Ivu
+  ja: ギャラクティアラ・<ruby>Ｆ<rt>ヒューズ</rt></ruby>・イブ
+  ja_romaji: Gyarakutiara Hyūzu Ivu
   ko:
   ko_rr:
   zh-TW:
