--- a/rush.yaml
+++ b/rush.yaml
@@ -97803,7 +97803,7 @@ name:
   it:
   pt:
   ja: <ruby>顕<rt>けん</rt></ruby><ruby>現<rt>げん</rt></ruby><ruby>術<rt>じゅつ</rt></ruby><ruby>師<rt>し</rt></ruby>ドルテオ
-  ja_romaji: Kengen Jutsushi Doruteo
+  ja_romaji: Kengenjutsushi Doruteo
   ko:
   ko_rr:
   zh-TW:
@@ -97918,8 +97918,8 @@ name:
   fr:
   it:
   pt:
-  ja: ギャラクティアラ・<ruby>Ｆ<rt>ヒュース</rt></ruby>・イブ
-  ja_romaji: Gyarakutiara Hyūsu Ivu
+  ja: ギャラクティアラ・<ruby>Ｆ<rt>ヒューズ</rt></ruby>・イブ
+  ja_romaji: Gyarakutiara Hyūzu Ivu
   ko:
   ko_rr:
   zh-TW:
