--- a/data/rush/yugipedia932073.yaml
+++ b/data/rush/yugipedia932073.yaml
@@ -12,8 +12,21 @@ name:
   ko_rr:
   zh-TW:
   zh-CN:
-text:
-  en:
+requirement:
+  en: |-
+    Pay 300 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up monster on your opponent's field loses ATK equal to [the number of face-up LIGHT Attribute Spellcaster Type monsters on your field] x 300 until the end of this turn.
   de:
   es:
   fr:
