--- a/rush.yaml
+++ b/rush.yaml
@@ -99883,7 +99883,7 @@ name:
   it:
   pt:
   ja: ライステラス・クライシス
-  ja_romaji: Raisu Terasu Kuraishisu
+  ja_romaji: Raisuterasu Kuraishisu
   ko:
   ko_rr:
   zh-TW:
