--- a/rush.yaml
+++ b/rush.yaml
@@ -100131,3 +100131,60 @@ sets:
     rarities:
     - Ultra Rare
 yugipedia_page_id: 934466
+---
+konami_id:
+name:
+  en: Harpie Regina
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハーピィ・レジーナ
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have another face-up WIND Attribute Winged Beast Type monster on your field, send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card. Then, if you have a face-up Normal Monster on your field, you can add 1 "Harpie Lady" or "Harpie Ladies" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Winged Beast / Effect
+attribute: WIND
+level: 4
+atk: 1000
+def: 300
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpieRegina-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP008
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 936314
